[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apexomni"
version = "3.1.7"
description = "Python3 Apexpro omni HTTP/WebSocket API Connector"
authors = [
    {name = "Dexter Dickinson", email = "xxx@apexomni.com"}
]
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "requests",
    "websocket-client",
    "websockets",
    "dateparser==1.0.0",
    "ecdsa==0.16.0",
    "eth_keys",
    "eth-account==0.13.7",
    "mpmath==1.0.0",
    "pytest>=4.4.0,<5.0.0",
    "requests-mock==1.6.0",
    "requests>=2.32.3,<3.0.0",
    "setuptools>=50.3.2",
    "sympy==1.6",
    "tox==3.13.2",
    "web3==6.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q"

[tool.black]
line-length = 88
target-version = ['py36', 'py37', 'py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
