[metadata]
license_files = LICENSE

[options]
zip_safe = False

[bdist_wheel]
universal = 1

[egg_info]
tag_build = 
tag_date = 0

[options]
packages = find:
install_requires =
    requests
    websocket-client
    websockets
    dateparser==1.0.0
    ecdsa==0.16.0
    eth_keys
    eth-account==0.13.7
    mpmath==1.0.0
    pytest>=4.4.0,<5.0.0
    requests-mock==1.6.0
    requests>=2.32.3,<3.0.0
    setuptools>=50.3.2
    sympy==1.6
    tox==3.13.2
    web3==6.0.0
python_requires = >=3.8
